[gd_scene load_steps=16 format=3 uid="uid://nnrhfywswupo"]

[ext_resource type="Script" path="res://scenes/main_game.gd" id="1_q85br"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="1_wwqgf"]
[ext_resource type="PackedScene" uid="uid://dmov2xrv47nx4" path="res://actors/player.tscn" id="2_obrol"]
[ext_resource type="Texture2D" uid="uid://beudwut7ac0jk" path="res://assets/Stars Small_1.png" id="3_jslog"]
[ext_resource type="Texture2D" uid="uid://cqf3xek2q6hls" path="res://assets/backgroundmirrored.png" id="4_kh8it"]
[ext_resource type="Texture2D" uid="uid://dbxe4jtph5ra1" path="res://assets/Stars Small_2.png" id="4_s7rqi"]
[ext_resource type="Script" path="res://scripts/Trail.gd" id="6_d2lhm"]
[ext_resource type="Texture2D" uid="uid://boe8csxgvr3ss" path="res://assets/grasstransparent.png" id="6_m1yvx"]
[ext_resource type="PackedScene" uid="uid://dy21sqe4fqm1v" path="res://actors/WaterPickup.tscn" id="7_n56n6"]
[ext_resource type="PackedScene" uid="uid://excc8c2neq53" path="res://actors/light_pickup.tscn" id="10_jc0w2"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_5qvnr"]
polygon = PackedVector2Array(2298, 1558, 2113, 1690, 1948, 1777, 2335, 1791, 2633, 1807, 2409, 1602)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_1wmrw"]
polygon = PackedVector2Array(2493, 1576, 2536, 1681, 2543, 1724, 2653, 1676, 2562, 1571)

[sub_resource type="Gradient" id="Gradient_el8ii"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vg3c2"]
gradient = SubResource("Gradient_el8ii")

[sub_resource type="Environment" id="Environment_mtgnt"]
glow_enabled = true
fog_enabled = true

[node name="MainGame" type="Node2D"]
script = ExtResource("1_q85br")

[node name="Ground" type="Sprite2D" parent="."]
z_index = -5
texture = ExtResource("6_m1yvx")
centered = false

[node name="LightOccluder2D" type="LightOccluder2D" parent="Ground"]
position = Vector2(-742, -22)
occluder = SubResource("OccluderPolygon2D_5qvnr")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Ground"]
position = Vector2(296, 3)
occluder = SubResource("OccluderPolygon2D_1wmrw")

[node name="MainLights" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="MainLights"]
position = Vector2(3551, 1571)
rotation = 2.45718
scale = Vector2(46.3312, 32.2186)
color = Color(1, 1, 0.501961, 1)
energy = 0.55
shadow_enabled = true
shadow_filter = 1
texture = SubResource("GradientTexture2D_vg3c2")

[node name="PointLight2D2" type="PointLight2D" parent="MainLights"]
position = Vector2(3813, 1672)
rotation = -2.35619
scale = Vector2(49.1527, 28.4475)
color = Color(1, 1, 0.447059, 1)
energy = 0.54
shadow_enabled = true
shadow_filter = 1
texture = SubResource("GradientTexture2D_vg3c2")

[node name="PointLight2D6" type="PointLight2D" parent="MainLights"]
position = Vector2(2186, 1150)
rotation = 0.523598
scale = Vector2(47.1437, 15.9219)
color = Color(1, 1, 0.447059, 1)
energy = 0.54
shadow_enabled = true
shadow_filter = 1
texture = SubResource("GradientTexture2D_vg3c2")

[node name="PointLight2D5" type="PointLight2D" parent="MainLights"]
position = Vector2(1662, 2116)
rotation = -0.785397
scale = Vector2(47.1437, 22.4531)
color = Color(1, 1, 0.447059, 1)
energy = 0.54
shadow_enabled = true
shadow_filter = 1
texture = SubResource("GradientTexture2D_vg3c2")

[node name="PointLight2D7" type="PointLight2D" parent="MainLights"]
position = Vector2(2085, -406)
rotation = 0.523598
scale = Vector2(47.1437, 22.4531)
color = Color(1, 1, 0.447059, 1)
energy = 0.54
shadow_enabled = true
shadow_filter = 1
texture = SubResource("GradientTexture2D_vg3c2")

[node name="PointLight2D8" type="PointLight2D" parent="MainLights"]
position = Vector2(2081, 1541)
rotation = 0.523598
scale = Vector2(47.1437, 15.9219)
color = Color(1, 1, 0.447059, 1)
energy = 0.54
shadow_enabled = true
shadow_filter = 1
texture = SubResource("GradientTexture2D_vg3c2")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(2432, 1773)

[node name="Player" parent="." instance=ExtResource("2_obrol")]
position = Vector2(2432, 1773)

[node name="Camera2D" type="Camera2D" parent="Player" node_paths=PackedStringArray("player")]
position = Vector2(-1, -1)
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("1_wwqgf")
player = NodePath("..")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -10

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -10
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(3000, 1591)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Background"]
modulate = Color(1, 1, 0.992157, 1)
texture = ExtResource("4_kh8it")
centered = false

[node name="DustBack" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -6
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(4096, 4096)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/DustBack"]
texture_repeat = 3
texture = ExtResource("4_s7rqi")
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false

[node name="Ground" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -5
texture = ExtResource("6_m1yvx")
centered = false

[node name="LightOccluder2D" type="LightOccluder2D" parent="ParallaxBackground/ParallaxLayer/Ground"]
occluder = SubResource("OccluderPolygon2D_5qvnr")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="ParallaxBackground/ParallaxLayer/Ground"]
occluder = SubResource("OccluderPolygon2D_1wmrw")

[node name="DustFront" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -3
motion_scale = Vector2(0.8, 0.8)
motion_mirroring = Vector2(4096, 4096)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/DustFront"]
texture = ExtResource("3_jslog")
centered = false

[node name="TrailMan" type="Node2D" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("6_d2lhm")
target = NodePath("../Player")
HEALTHY_COLOR = Color(0, 0.572549, 0, 1)
DEATH_COLOR = Color(0.294118, 0.14902, 0, 1)

[node name="Trail" type="Line2D" parent="TrailMan"]
width = 5.0
default_color = Color(0.117647, 0.568627, 0.266667, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="TrailFridge" type="Node2D" parent="TrailMan"]

[node name="Pickups" type="Node2D" parent="."]

[node name="Pickup" parent="Pickups" instance=ExtResource("7_n56n6")]
position = Vector2(2426, 1413)

[node name="Pickup2" parent="Pickups" instance=ExtResource("7_n56n6")]
position = Vector2(2339, 1324)

[node name="Pickup3" parent="Pickups" instance=ExtResource("7_n56n6")]
position = Vector2(2557, 1246)

[node name="Pickup4" parent="Pickups" instance=ExtResource("7_n56n6")]
position = Vector2(2418, 1227)

[node name="Pickup5" parent="Pickups" instance=ExtResource("7_n56n6")]
position = Vector2(2729, 1226)

[node name="Pickup6" parent="Pickups" instance=ExtResource("7_n56n6")]
position = Vector2(2674, 1309)

[node name="LightPickups" type="Node2D" parent="."]

[node name="LightPickup" parent="LightPickups" instance=ExtResource("10_jc0w2")]
position = Vector2(2890, 1034)

[node name="LightPickup2" parent="LightPickups" instance=ExtResource("10_jc0w2")]
position = Vector2(2527, 928)

[node name="LightPickup3" parent="LightPickups" instance=ExtResource("10_jc0w2")]
position = Vector2(2570, 1370)

[node name="LightPickup4" parent="LightPickups" instance=ExtResource("10_jc0w2")]
position = Vector2(2871, 1326)

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
custom_minimum_size = Vector2(0, 100)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 4.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="UI/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="WaterProgressBar" type="ProgressBar" parent="UI/CenterContainer/GridContainer"]
modulate = Color(0, 0.517647, 0.517647, 1)
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
value = 100.0
rounded = true
show_percentage = false

[node name="LightProgressBar" type="ProgressBar" parent="UI/CenterContainer/GridContainer"]
modulate = Color(1, 0.905882, 0, 1)
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
value = 100.0
rounded = true
show_percentage = false

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
energy = 0.28
blend_mode = 1
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mtgnt")

[connection signal="death" from="Player" to="." method="_on_player_death"]
[connection signal="is_watered" from="Player" to="TrailMan" method="_on_player_is_watered"]
